reconnect system added